# pycounts_aw

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
tests/: test_pycounts_aw.py
